Re: fix alignment on hsInput in safari

--- a/src/app/atoms/input/Input.scss
+++ b/src/app/atoms/input/Input.scss
@@ -2,6 +2,7 @@
   display: block;
   width: 100%;
   min-width: 0px;
+  margin: 0;
   padding: var(--sp-tight) var(--sp-normal);
   background-color: var(--bg-surface-low);
   color: var(--tc-surface-normal);
